fix: bugs on displaying names fixed
