# backend/src/login/routes/auth.routes.ts
@@ -7,6 +7,8 @@ import { authAppwriteController } from '../controllers/auth.appwrite.controller'
 //>     "password": "AdminPass1!"
 router.post('/', authController.login);
 
+router.post('/refresh', authController.refreshToken);
+
 router.get('/google/url/login', authController.getGoogleOAuthUrlLogin);
 router.get('/google/url/signup', authController.getGoogleOAuthUrlSignup);
 router.get('/google/callback', authController.githubCallback); // creates and res jwt with user info
